# Rain-simulator

./: .env  .gitignore  README.md  mydatabase.db  runDB.sh  runRPI.sh  stopDB.sh  stopRPI.sh  streznik.py
Project/: README.md
Project/database/: stack-db.yml
Project/rpi/: docker-compose.yml  stack-rpi.yml
Project/rpi/api/: api.py  pyproject.toml  test_requests.txt
Project/rpi/nginx/: Dockerfile
Project/startStopProdScripts/: startRPI.sh  stopSWARM.sh
Project/startStopTestScripts/: stopRPI.sh
Standalone-SW/Intel-RealSense-D435i/: RealSenseGUI.py  requirements.txt
database/: docker-compose.yaml  docker-compose.yml  init-mongo.js  swarm-db.yml
depthCameraSW/: README.md  RealSenseGUI.py  environment.yml  requirements.txt
rpi/: .env  docker-compose.yaml  docker-compose.yml
rpi/api/: Dockerfile  api.py  pyproject.toml  test_requests.txt
rpi/api/migrations/: migrate.py
rpi/nginx/: nginx.conf
startProdScripts/: runDB.sh
startStopProdScripts/: startDB.sh  startSWARM.sh  stopDB.sh  stopRPI.sh
startStopTestScripts/: startDB.sh  startRPI.sh  stopDB.sh
startTestScripts/: stopTDB.sh  stopTRPI.sh
testing/: RealSenseGUI.py  camera-test1.py  camera-test2.py  camera-test3.py  camera-testing.py
